--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -2,4 +2,12 @@
     font-family: 'Fraunces', serif;
     @include fontSizeLineHeight(42px, 50.4px);
     font-weight: 400;
+
+    @include mediaMax($medium) {
+        font-size: 36px;
+    }
+
+    @include mediaMax($small) {
+        font-size: 32px;
+    }
 }
