--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import 'utils/variables';
 @import 'utils/mixins';
-@import 'components/nulling';
-@import 'components/visually-hidden';
+@import 'base/nulling';
+@import 'base/visually-hidden';
 @import 'components/body';
 @import 'components/container';
 @import 'components/title';
