--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,6 +1,10 @@
 .about {
     padding: 120px 0;
 
+    @include mediaMax($medium) {
+        padding: 60px 0;
+    }
+
     // .about__container
 
     &__container {
