--- a/sass/components/_blog.scss
+++ b/sass/components/_blog.scss
@@ -1,6 +1,10 @@
 .blog {
     padding: 80px 0;
 
+    @include mediaMax($medium) {
+        padding: 40px 0;
+    }
+
     // .blog__container
 
     &__container {}
