--- a/sass/components/_pluses.scss
+++ b/sass/components/_pluses.scss
@@ -1,6 +1,10 @@
 .pluses {
     padding: 80px 0;
 
+    @include mediaMax($medium) {
+        padding: 40px 0;
+    }
+
     color: #ffffff;
 
     background-color: #006B99;
