--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,6 +1,10 @@
 .services {
     padding: 80px 0;
 
+    @include mediaMax($medium) {
+        padding: 40px 0;
+    }
+
     // .services__container
 
     &__container {
@@ -87,7 +91,7 @@
             color: $textColor;
         }
 
-        p {
+        span {
             padding-right: 15px;
         }
 
